# clob

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
clob/: __init__.py  main.py
clob/agents/: __init__.py  coder.py  orchestrator.py
clob/analytics/: __init__.py
clob/attachments/: __init__.py
clob/config/: __init__.py  settings.py
clob/core/: __init__.py  mcp.py  runtime.py
clob/indexing/: __init__.py
clob/memory/: __init__.py  manager.py  models.py  persistence.py
clob/plugins/: __init__.py  loader.py
clob/providers/: __init__.py  anthropic.py  base.py  capabilities.py  groq.py  nvidia_build.py  ollama.py  openai_compatible.py  openrouter.py  registry.py
clob/rendering/: __init__.py  images.py
clob/sandbox/: __init__.py
clob/themes/: __init__.py
clob/tools/: __init__.py  shell.py
clob/tui/: __init__.py  app.py  bindings.py
clob/tui/screens/: __init__.py  memory_search.py  palette.py  settings.py  usage.py
clob/tui/themes/: dark.tcss
clob/tui/widgets/: __init__.py
clob/utils/: __init__.py  logging.py
clob/workspace/: __init__.py
scripts/: launcher.py
scripts/chocolatey/: README.md
scripts/chocolatey/clob/: clob.nuspec
scripts/chocolatey/clob/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
tests/: test_clob.py
