[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clob"
version = "0.2.0-beta"
description = "Universal AI in your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "clob contributors" }]
keywords = ["ai", "terminal", "tui", "llm", "ollama", "openrouter", "groq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.59.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "tomllib>=1.0.0; python_version < '3.11'",
    "markdown-it-py>=3.0.0",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[project.scripts]
clob = "clob.main:app"

[tool.hatch.build.targets.wheel]
packages = ["clob"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
